--- a/templates/base.html
+++ b/templates/base.html
@@ -298,7 +298,7 @@
                                         <div class="ms-4"><span class="d-block font-small fw-bold mb-0">Documentation<span
                                                     class="badge badge-sm badge-secondary ms-2">v3.1</span></span> <span
                                                 class="small">Examples and guides</span></div>
-                                    </a><a href="https://github.com/themesberg/pixel-bootstrap-ui-kit/issues"
+                                    </a><a href="#"
                                         target="_blank"
                                         class="list-group-item list-group-item-action d-flex align-items-center p-0 py-3 px-lg-4"><span
                                             class="icon icon-sm"><span class="fas fa-microphone-alt"></span></span>
@@ -318,7 +318,8 @@
                     {{ user.email }}
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-                    <a class="dropdown-item" href="#">My account</a>
+                    <a class="dropdown-item" href="{% url 'dashboard' %}">Trading app</a>
+                    <a class="dropdown-item" href="{% url 'user_profile' %}">My account</a>
                     <a class="dropdown-item" href="#">Change password</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
@@ -360,49 +361,49 @@
                 <p>BlackBox is multi asset online platform for algorithmic and quantitative trading trough brokers api.</p>
                 <ul class="social-buttons mb-5 mb-lg-0">
                     <li>
-                        <a href="https://twitter.com/themesberg" aria-label="twitter social link"
+                        <a href="#" aria-label="twitter social link"
                             class="icon-white me-2">
                             <span class="fab fa-twitter"></span>
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/themesberg/" class="icon-white me-2"
+                        <a href="#" class="icon-white me-2"
                             aria-label="facebook social link">
                             <span class="fab fa-facebook"></span>
                         </a>
                     </li>
                     <li>
-                        <a href="https://github.com/themesberg" aria-label="github social link" class="icon-white me-2">
+                        <a href="#" aria-label="github social link" class="icon-white me-2">
                             <span class="fab fa-github"></span>
                         </a>
                     </li>
                     <li>
-                        <a href="https://dribbble.com/themesberg" class="icon-white" aria-label="dribbble social link">
+                        <a href="#" class="icon-white" aria-label="dribbble social link">
                             <span class="fab fa-dribbble"></span>
                         </a>
                     </li>
                 </ul>
             </div>
             <div class="col-6 col-md-2 mb-5 mb-lg-0">
-                <span class="h5">Themesberg</span>
+                <span class="h5">BlackBox</span>
                 <ul class="footer-links mt-2">
-                    <li><a target="_blank" href="https://themesberg.com/blog">Blog</a></li>
-                    <li><a target="_blank" href="https://themesberg.com/themes">Themes</a></li>
-                    <li><a target="_blank" href="https://themesberg.com/about">About Us</a></li>
-                    <li><a target="_blank" href="https://themesberg.com/contact">Contact Us</a></li>
+                    <li><a target="_blank" href="#">Features</a></li>
+                    <li><a target="_blank" href="#">Blog</a></li>
+                    <li><a target="_blank" href="#">About Us</a></li>
+                    <li><a target="_blank" href="#">Contact Us</a></li>
                 </ul>
             </div>
             <div class="col-6 col-md-2 mb-5 mb-lg-0">
                 <span class="h5">Other</span>
                 <ul class="footer-links mt-2">
-                    <li><a href="https://themesberg.com/docs/bootstrap-5/pixel/getting-started/quick-start/"
+                    <li><a href="#"
                             target="_blank">Docs</a></li>
-                    <li><a href="https://themesberg.com/docs/pixel-bootstrap/getting-started/changelog"
+                    <li><a href="#"
                             target="_blank">Changelog</a></li>
-                    <li><a target="_blank" href="https://themesberg.com/licensing">License</a>
+                    <li><a target="_blank" href="#">License</a>
                     </li>
                     <li><a target="_blank"
-                            href="https://github.com/themesberg/pixel-bootstrap-ui-kit/issues">Support</a></li>
+                            href="#">Support</a></li>
                 </ul>
             </div>
             <div class="col-12 col-md-4 mb-5 mb-lg-0">
@@ -430,9 +431,9 @@
         <hr class="bg-secondary my-3 my-lg-5">
         <div class="row">
             <div class="col mb-md-0">
-                <a href="https://themesberg.com" target="_blank" class="d-flex justify-content-center mb-3">
+                <a href="#" target="_blank" class="d-flex justify-content-center mb-3">
                     <img src="{% static '/assets/img/black_box_logo.png' %}" height="30" class="me-2" alt="Themesberg Logo">
-                    <p class="text-white fw-bold footer-logo-text m-0">Themesberg</p>
+                    <p class="text-white fw-bold footer-logo-text m-0">BlackBox</p>
                 </a>
                 <div class="d-flex text-center justify-content-center align-items-center" role="contentinfo">
                     <p class="fw-normal font-small mb-0">Copyright © BlackBox 2019-<span
