--- a/templates/home.html
+++ b/templates/home.html
@@ -47,7 +47,7 @@
                             <div class="d-flex">
                                 <div class="me-3 me-md-4">
                                     <div class="icon icon-md icon-secondary-app">
-                                        <span class="fas fa-shield-alt"></span>
+                                        <i class="fas fa-university fa-5x"></i>
                                     </div>
                                 </div>
                                 <div>
@@ -59,8 +59,8 @@
                         <div class="my-4">
                             <div class="d-flex">
                                 <div class="me-3 me-md-4">
-                                    <div class="icon icon-md icon-secondary-app">
-                                        <span class="fas fa-user-circle"></span>
+                                    <div class="icon icon-md icon-secondary-app p-3">
+                                        <i class="fas fa-euro-sign fa-5x"></i>
                                     </div>
                                 </div>
                                 <div>
@@ -72,8 +72,8 @@
                         <div class="my-4">
                             <div class="d-flex">
                                 <div class="me-3 me-md-4">
-                                    <div class="icon icon-md icon-secondary-app">
-                                        <span class="fas fa-file-alt"></span>
+                                    <div class="icon icon-md icon-secondary-app p-2">
+                                        <i class="fab fa-btc fa-5x"></i>
                                     </div>
                                 </div>
                                 <div>
