--- a/templates/blog/blog_home.html
+++ b/templates/blog/blog_home.html
@@ -1,25 +1,52 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-<div class="container">
-<h1>Tohle je blog! Tralalala</h1>
-
-
-
-{% for post in posts %}
-<div class="card shadow bg-white border-gray-300 p-4 rounded m-3">
-    <a href="./blog-post.html">
-        <img src="../../assets/img/blog/image-2.jpg" class="card-img-top rounded" alt=""></a>
-        <div class="card-body p-0 pt-4"><a href="./blog-post.html" class="h4">{{post.title}}</a>
-            <div class="d-flex align-items-center my-3">
-            <img class="avatar avatar-sm rounded-circle" src="../../assets/img/team/profile-picture-2.jpg" alt="">
-            <h3 class="h6 small ms-2 mb-0">{{post.author}}</h3>
+{% include "navigation.html" %}
+<section class="section-header bg-bx-primary text-white pb-10 pb-sm-8 pb-lg-11">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-8 text-center">
+                <h1 class="display-2 mb-4">BlackBox Trading Blog</h1>
+                <p class="lead">We sharing here our thoughs, insights and opinions about trading and news about BlackBox app</p>
+            </div>
         </div>
-        <div class=" d-flex align-items-center my-3"><a href="#" class="badge bg-tertiary">{{post.category}}</a></div>
-      <p class="mb-0">{{ post.content | truncatechars:400 }}</p>
     </div>
-</div>
-{% endfor %}
+</section>
 
-</div>
+<section class="section section-lg line-bottom-light">
+    <div class="container mt-n10 mt-lg-n12 z-2">
+    	<div class="row">
+            <div class="col-lg-12 mb-5">
+                <div class="card shadow bg-white border-gray-300 flex-lg-row align-items-center g-0 p-4">
+                    <a href="./blog-post.html" class="col-12 col-lg-6">
+                    <img src="{% static '/assets/img/blog/image-2.jpg' %}" alt="themesberg office" class="card-img-top rounded"></a>
+                        <div class="card-body d-flex flex-column justify-content-between col-auto py-4 p-0 p-lg-3 p-xl-5">
+                            <a href="./blog-post.html"><h2>{{posts.first.title }}</h2></a>
+                            <p>{{posts.first.content | truncatechars:250  }}</p>
+                            <div class="d-flex align-items-center mb-1"><a href="#" class="badge bg-warning text-dark">{{posts.first.category}} </a></div>
+                            <div class="d-flex align-items-center mt-3">
+                            <h3 class="h6 small ms-2 mb-0">{{posts.first.author }}</h3><span class="h6 text-muted small fw-normal mb-0 ms-auto"><time datetime="2019-04-25">{{posts.first.publish}}</time></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+                {% for post in posts|slice:"1:" %}
+                <div class="col-12 col-md-6 col-lg-4 mb-4 mb-lg-5">
+                    <div class="card shadow bg-white border-gray-300 p-4 rounded">
+                    <a href="./blog-post.html"><img src="{% static '/assets/img/blog/image-3.jpg' %}" class="card-img-top rounded" alt="our desk"></a>
+                    <div class="card-body p-0 pt-4"><a href="./blog-post.html" class="h4">{{post.title}}</a>
+                    <div class="d-flex align-items-center my-3"><img class="avatar avatar-sm rounded-circle" src="../../assets/img/team/profile-picture-2.jpg" alt="Neil avatar">
+                    <h3 class="h6 small ms-2 mb-0">{{ post.author}}</h3></div>
+                    <div class="d-flex align-items-center my-1"><a href="#" class="badge bg-warning text-dark">{{post.category}} </a></div>
+
+                    <p class="mb-0">{{ post.content | truncatechars:250 }}</p>
+                    </div>
+                </div>
+            </div>
+            {% endfor%}
+
+        </div>
+    </div>
+</section>                                   
+{% include "footer.html" %}
 {% endblock %}
