--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
+    {% include "navigation.html" %}    
+        {% include "home_header.html" %}
+
     <section class="section section-lg py-sm-4">
         <div class="container z-2 mt-sm-n6 mt-md-n7"><div class="row">
             <div class="col-12 col-md-6 col-lg-4 mb-1 ">
@@ -108,5 +111,5 @@
             </div>
         </div>
     </div>
-
+{% include "footer.html" %}
 {% endblock %}
