--- a/templates/blog/blog_home.html
+++ b/templates/blog/blog_home.html
@@ -18,10 +18,10 @@
     	<div class="row">
             <div class="col-lg-12 mb-5">
                 <div class="card shadow bg-white border-gray-300 flex-lg-row align-items-center g-0 p-4">
-                    <a href="./blog-post.html" class="col-12 col-lg-6">
+                    <a href="{{ posts.first.get_absolute_url }}" class="col-12 col-lg-6">
                     <img src="{% static '/assets/img/blog/image-2.jpg' %}" alt="themesberg office" class="card-img-top rounded"></a>
                         <div class="card-body d-flex flex-column justify-content-between col-auto py-4 p-0 p-lg-3 p-xl-5">
-                            <a href="./blog-post.html"><h2>{{posts.first.title }}</h2></a>
+                            <a href="{{ posts.first.get_absolute_url }}"><h2>{{posts.first.title }}</h2></a>
                             <p>{{posts.first.content | truncatechars:250  }}</p>
                             <div class="d-flex align-items-center mb-1"><a href="#" class="badge bg-warning text-dark">{{posts.first.category}} </a></div>
                             <div class="d-flex align-items-center mt-3">
@@ -33,9 +33,9 @@
                 {% for post in posts|slice:"1:" %}
                 <div class="col-12 col-md-6 col-lg-4 mb-4 mb-lg-5">
                     <div class="card shadow bg-white border-gray-300 p-4 rounded">
-                    <a href="./blog-post.html"><img src="{% static '/assets/img/blog/image-3.jpg' %}" class="card-img-top rounded" alt="our desk"></a>
-                    <div class="card-body p-0 pt-4"><a href="./blog-post.html" class="h4">{{post.title}}</a>
-                    <div class="d-flex align-items-center my-3"><img class="avatar avatar-sm rounded-circle" src="../../assets/img/team/profile-picture-2.jpg" alt="Neil avatar">
+                    <a href="{{ post.get_absolute_url }}"><img src="{{ post.get_header_image }}" class="card-img-top rounded" alt="blog image"></a>
+                    <div class="card-body p-0 pt-4"><a href="{{ post.get_absolute_url }}" class="h4">{{post.title}}</a>
+                    <div class="d-flex align-items-center my-3"><img class="avatar avatar-sm rounded-circle" src="{% static 'webapp/assets/img/avatar.svg' %}" alt="Author avatar">
                     <h3 class="h6 small ms-2 mb-0">{{ post.author}}</h3></div>
                     <div class="d-flex align-items-center my-1"><a href="#" class="badge bg-warning text-dark">{{post.category}} </a></div>
 
