--- a/templates/tradingapp/dashboard_base.html
+++ b/templates/tradingapp/dashboard_base.html
@@ -427,7 +427,7 @@
         <li class="nav-item dropdown ms-lg-3">
           <a class="nav-link dropdown-toggle pt-1 px-0" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <div class="media d-flex align-items-center">
-              <img class="avatar rounded-circle" alt="Image placeholder" src="{% static 'webapp/assets/img/avatar.svg' %}">
+              <img class="avatar rounded-circle" alt="Image placeholder" src="{{ profile.get_avatar }}">
               <div class="media-body ms-2 text-dark align-items-center d-none d-lg-block">
                 <span class="mb-0 font-small fw-bold text-gray-900">{{ user.username }}</span>
               </div>
